--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img id="logo" src="images/ml_30.png">
             <h1>Opera of the Future @ ML30</h1>
 
-            <p id="intro">In celebration of the 30th anniversary of the MIT Media Lab, Tod Machover set out to discover the sound(s) of his Opera of the Future group past and present.  30 sounds from 30 alumni over the past 30 years transformed into 3 x 30-second vignettes by Tod and his current students.  30-30-30. </p>
+            <p id="intro">In celebration of the 30th anniversary of the MIT Media Lab on October 30, 2015, Tod Machover set out to discover the sound(s) of his Opera of the Future group past and present.  30 sounds from 30 alumni over the past 30 years transformed into 3 x 30-second vignettes by Tod and his current students.  30-30-30. </p>
         </header>
 
         <div id="sec1">
