Hyperlink Opera of the Future.

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
         </div>
 
         <footer>
-            <p>Opera of the Future at MIT Media Lab</p>
+            <p><a href="http://opera.media.mit.edu">Opera of the Future</a> at MIT Media Lab</p>
         </footer>
     </div>
 </body>
